Implement discount strategies and customer inheritance hierarchy
   Created complete discount strategy system:

   1. StandardDiscountStrategy (Strategies/):
      - For regular customers: 0-5% discount
      - Progressive discount based on purchase amount
      - Logic: 0% (<1k), 2% (1k-5k), 3% (5k-10k), 4% (10k-20k), 5% (>20k)

   2. WholesaleDiscountStrategy (Strategies/):
      - For wholesale customers: 10-20% discount
      - Minimum order amount validation (default: 10,000 RUB)
      - Progressive discount: 10% (10k-30k), 12% (30k-50k), 15% (50k-100k),
        18% (100k-200k), 20% (>200k)
      - Additional method: ValidateMinim

umOrder()

--- a/CustomerManagement.Tests/CustomerManagement.Tests.csproj
+++ b/CustomerManagement.Tests/CustomerManagement.Tests.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CustomerManagement.Core\CustomerManagement.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
