Implement WPF MVVM infrastructure and first working UI
   Created complete MVVM foundation for WPF application:

   1. Project Structure:
      - Created folder organization following MVVM pattern
      - Folders: Views/, ViewModels/, Commands/, Converters/, Models/
      - Set CustomerManagement.WPF as Startup Project
      - Proper separation of concerns

   2. RelayCommand implementation:
      - Generic ICommand implementation for WPF
      - Two constructors: with/without parameters
      - Support for Execute and CanExecute delegates
      - Integration with CommandManager for automatic state updates
      - Usage: new RelayCommand(execute, canExecute)
      - Enables button command binding in XAML

   3. ViewModelBase abstract class:
      - INotifyPropertyChanged implementation
      - OnPropertyChanged method with CallerMemberName attribute
      - SetProperty<T> helper method for simplified property setters
      - OnPropertiesChanged for multiple property notifications
      - Base class for all ViewModels
      - Automatic UI updates when properties chang

e

   4. MainViewModel:
      - First concrete ViewModel implementation
      - ObservableCollection<Customer> for data binding
      - Integration with CustomerRepository
      - Integration with CustomerFactory
      - Commands implemented:
        * AddCustomerCommand - creates test customer
        * DeleteCustomerCommand - removes selected customer (with CanExecute)
        * RefreshCommand

- reloads customer list
      - Properties:
        * Customers - observable collection for DataGrid
        * SelectedCustomer - tracks selected item in UI
      - LoadTestData() - loads 3 demo customers (Regular, Wholesale, VIP)
      - Demonstrates complete MVVM workflow

  5. MainWindow.xaml UI:
      - First working user interface
      - Window properties: 900x600, centered, title set
      - DataContext bound to MainViewModel
      - Layout using Grid with 3 rows:

       * Header with title
        * B

--- a/CustomerManagement.WPF/CustomerManagement.WPF.csproj
+++ b/CustomerManagement.WPF/CustomerManagement.WPF.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\CustomerManagement.Core\CustomerManagement.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\" />
+    <Folder Include="Converters\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
