Add application icon CustomerManager.ico

--- a/CustomerManagement.WPF/CustomerManagement.WPF.csproj
+++ b/CustomerManagement.WPF/CustomerManagement.WPF.csproj
@@ -6,7 +6,12 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>Assets\CustomerManager.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Assets\CustomerManager.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CustomerManagement.Core\CustomerManagement.Core.csproj" />
@@ -14,6 +19,12 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Assets\CustomerManager.ico">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
